--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "express": "^4.19.2",
     "google-auth-library": "^9.6.3",
     "googleapis": "^134.0.0",
     "mysql2": "^3.9.1",
