--- a/.github/workflows/mariadb-validate.yml
+++ b/.github/workflows/mariadb-validate.yml
@@ -1,22 +1,21 @@
-name: Publish MYSQL
+name: Validate MARIADB
+
 on:
-  push:
-    branches:
-      - main
+  pull_request:
     paths:
-      - "mysql/**"
+      - "mariadb/**"
 
 jobs:
-  update:
+  validate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: liquibase-github-actions/update@v4.25.1
+      - uses: liquibase-github-actions/validate@v4.25.1
         with:
-          driver: com.mysql.cj.jdbc.Driver
-          classpath: mysql/lib/mysql-connector-j-8.0.33.jar
+          driver: com.mariadb.jdbc.Driver
+          classpath: mariadb/lib/mariadb-connector-3.3.3.jar
           changelogFile: "changelog.xml"
           url: ${{ secrets.MYSQL_URL }}
           username: ${{ secrets.MYSQL_USERNAME }}
           password: ${{ secrets.MYSQL_PASSWORD }}
-          searchPath: mysql
+          searchPath: mariadb
