--- a/.github/workflows/mariadb-validate.yml
+++ b/.github/workflows/mariadb-validate.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: liquibase-github-actions/validate@v4.25.1
         with:
-          driver: com.mariadb.jdbc.Driver
+          driver: org.mariadb.jdbc.Driver
           classpath: mariadb/lib/mariadb-connector-3.3.3.jar
           changelogFile: "changelog.xml"
           url: ${{ secrets.MYSQL_URL }}
