--- a/package.json
+++ b/package.json
@@ -12,8 +12,5 @@
       "url": "https://github.com/KoVaL05"
     }
   ],
-  "license": "MIT",
-  "dependencies": {
-    "react-router-dom": "^6.23.0"
-  }
+  "license": "MIT"
 }
