--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,9 @@
     "@mui/material": "^5.15.17",
     "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-colorful": "^5.6.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
