--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
       "url": "https://github.com/KoVaL05"
     }
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react-window": "^1.8.10"
+  }
 }
