--- a/web/package.json
+++ b/web/package.json
@@ -15,12 +15,15 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.10",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25"
+    "@types/react-dom": "^18.2.25",
+    "@types/react-window": "^1.8.8"
   },
   "scripts": {
     "start": "react-scripts start",
