--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csv": "^6.3.9",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "google-auth-library": "^9.6.3",
